# mb-opc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conda_env.yml  pyproject.toml  requirements.txt
.dvc/: config
checkpoints/: .gitignore  exported_model.onnx.dvc  unet_concat_checkpoint.pth.dvc  upernet.ckpt.dvc
configs/: config.yaml  dvc-storage.json
configs/env/: local.yaml  train_machine.yaml
configs/logging/: logging.yaml
configs/loss/: bce.yaml  composite.yaml  iou.yaml
configs/loss/composite/: bce_iou.yaml
configs/model/: cfno.yaml  manet.yaml  pspnet.yaml  unet.yaml  upernet.yaml
configs/optim/: adam.yaml
configs/sched/: cos_anneal.yaml
configs/training/: training.yaml
data/processed/: .gitignore  gds_dataset.dvc
models/: attention_unet.py  cfno.py  damo.py  lit_generator.py  to_onnx.py
models/components/: attention_unet.py  cfno.py  damo.py  unet.py
notebooks/: OPC_losses.ipynb  losses.ipynb  perceptual_loss.ipynb  test_layers.ipynb
src/: config.py  dataset.py  dev.py  evaluate.py  inference.py  losses.py  metrics.py  train.py  unet_inference.py  utils.py
src/converters/: gds2img.py  img2gds.py  img2gds_old.py
src/data/: dataset.py  remove_files.py  split_data.py
src/inference/: classifier.py  unet.py
src/models/: cfno.py  damo.py  unet.py
src/train/: attention_unet.py  cfno.py  classifier.py  damo.py  manet.py  pspnet.py  train_cfno.py  unet.py
